@@ -1,3 +1,12 @@
+2008-01-11  Dan Williams  <dcbw@redhat.com>
+
+	* src/utils/utils.c
+	  src/utils/utils.h
+		- (utils_ether_addr_valid): new function
+
+	* src/applet.c
+		- (add_seen_bssid): ensure BSSID is valid before saving it
+
 2008-01-02  Dan Williams  <dcbw@redhat.com>
 
 	Patch from Chris Aillon
